--- a/src/test/Geckon.MCM.Module.Standard.Test/Geckon.MCM.Module.Standard.Test.csproj
+++ b/src/test/Geckon.MCM.Module.Standard.Test/Geckon.MCM.Module.Standard.Test.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>25f93d33-0f20-448f-bbd5-53c238a1f025</ProjectGuid>
+    <ProjectGuid>{32FBED13-A6F2-4C48-948B-98FCEF550DBF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Geckon.MCM.Module</RootNamespace>
-    <AssemblyName>Geckon.MCM.Module</AssemblyName>
+    <RootNamespace>Geckon.MCM.Module.Standard.Test</RootNamespace>
+    <AssemblyName>Geckon.MCM.Module.Standard.Test</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,8 +31,27 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="geckon">
+      <HintPath>..\..\..\lib\geckon.dll</HintPath>
+    </Reference>
+    <Reference Include="Geckon.Portal.Core">
+      <HintPath>..\..\..\lib\Geckon.Portal.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Geckon.Portal.Core.Standard">
+      <HintPath>..\..\..\lib\Geckon.Portal.Core.Standard.dll</HintPath>
+    </Reference>
+    <Reference Include="Geckon.Portal.Data">
+      <HintPath>..\..\..\lib\Geckon.Portal.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="Geckon.Portal.Extensions.Standard.Test">
+      <HintPath>..\..\..\lib\Geckon.Portal.Extensions.Standard.Test.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\..\tools\nunit\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,8 +59,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BaseTest.cs" />
+    <Compile Include="ObjectTypeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\app\Geckon.MCM.Data.Linq\Geckon.MCM.Data.Linq.csproj">
+      <Project>{30ED23D8-60D9-4F98-AAB5-C177171A6B6E}</Project>
+      <Name>Geckon.MCM.Data.Linq</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\app\Geckon.MCM.Module.Standard\Geckon.MCM.Module.Standard.csproj">
+      <Project>{3C75FA89-055C-4AF5-9CE0-60E7AD766ECD}</Project>
+      <Name>Geckon.MCM.Module.Standard</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
