Added: GET/CREATE/UPDATE/DELETE for Language Added: GET/CREATE/UPDATE/DELETE for FolderType Added: GET/CREATE/UPDATE/DELETE for ObjectRelationType

--- a/src/app/Geckon.MCM.Data.Linq/Geckon.MCM.Data.Linq.csproj
+++ b/src/app/Geckon.MCM.Data.Linq/Geckon.MCM.Data.Linq.csproj
@@ -44,7 +44,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DTO\ObjectType.cs" />
     <Compile Include="MCM.cs">
       <DependentUpon>MCM.dbml</DependentUpon>
     </Compile>
@@ -79,6 +78,9 @@
     <None Include="MCM.dbml.layout">
       <DependentUpon>MCM.dbml</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DTO\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
