Modified: Folder_Get no return the number of subfolders aswell. Modified: Folder_Get Can now be given a parentID and will return the subfolders of that ID Added: Folder_Delete will delete a folder but will return an error if the folder isn't empty Added: FolderNotEmptyException Added: Changes SQL file, which must be used on a Database (Tag) version to bring it up to date

--- a/src/test/Geckon.MCM.Module.Standard.Test/Geckon.MCM.Module.Standard.Test.csproj
+++ b/src/test/Geckon.MCM.Module.Standard.Test/Geckon.MCM.Module.Standard.Test.csproj
@@ -70,6 +70,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\app\Geckon.MCM.Core.Exception\Geckon.MCM.Core.Exception.csproj">
+      <Project>{4E125648-0FA1-4FD3-AB15-343468DE471D}</Project>
+      <Name>Geckon.MCM.Core.Exception</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\app\Geckon.MCM.Data.Linq\Geckon.MCM.Data.Linq.csproj">
       <Project>{30ED23D8-60D9-4F98-AAB5-C177171A6B6E}</Project>
       <Name>Geckon.MCM.Data.Linq</Name>
