--- a/src/app/Geckon.MCM.Core.Exception/Geckon.MCM.Core.Exception.csproj
+++ b/src/app/Geckon.MCM.Core.Exception/Geckon.MCM.Core.Exception.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{3C75FA89-055C-4AF5-9CE0-60E7AD766ECD}</ProjectGuid>
+    <ProjectGuid>{4E125648-0FA1-4FD3-AB15-343468DE471D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Geckon.MCM.Module.Standard</RootNamespace>
-    <AssemblyName>Geckon.MCM.Module.Standard</AssemblyName>
+    <RootNamespace>Geckon.MCM.Core.Exception</RootNamespace>
+    <AssemblyName>Geckon.MCM.Core.Exception</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,25 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="geckon">
-      <HintPath>..\..\..\lib\geckon.dll</HintPath>
-    </Reference>
-    <Reference Include="Geckon.Portal.Core">
-      <HintPath>..\..\..\lib\Geckon.Portal.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Geckon.Portal.Core.Exception">
-      <HintPath>..\..\..\lib\Geckon.Portal.Core.Exception.dll</HintPath>
-    </Reference>
-    <Reference Include="Geckon.Portal.Core.Standard">
-      <HintPath>..\..\..\lib\Geckon.Portal.Core.Standard.dll</HintPath>
-    </Reference>
-    <Reference Include="Geckon.Portal.Data">
-      <HintPath>..\..\..\lib\Geckon.Portal.Data.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Linq" />
-    <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,18 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MCMModule.cs" />
+    <Compile Include="FolderNotEmptyException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Geckon.MCM.Core.Exception\Geckon.MCM.Core.Exception.csproj">
-      <Project>{4E125648-0FA1-4FD3-AB15-343468DE471D}</Project>
-      <Name>Geckon.MCM.Core.Exception</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Geckon.MCM.Data.Linq\Geckon.MCM.Data.Linq.csproj">
-      <Project>{30ED23D8-60D9-4F98-AAB5-C177171A6B6E}</Project>
-      <Name>Geckon.MCM.Data.Linq</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
