--- a/src/test/Geckon.MCM.Module.Standard.Test/Geckon.MCM.Module.Standard.Test.csproj
+++ b/src/test/Geckon.MCM.Module.Standard.Test/Geckon.MCM.Module.Standard.Test.csproj
@@ -66,6 +66,7 @@
     <Compile Include="FolderTypeTest.cs" />
     <Compile Include="ObjectRealtionsTypeTest.cs" />
     <Compile Include="LanguageTest.cs" />
+    <Compile Include="ObjectTest.cs" />
     <Compile Include="ObjectTypeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
