--- a/src/app/Geckon.MCM.Data.Linq/Geckon.MCM.Data.Linq.csproj
+++ b/src/app/Geckon.MCM.Data.Linq/Geckon.MCM.Data.Linq.csproj
@@ -86,6 +86,9 @@
     <Folder Include="DTO\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>COPY $(TargetPath) $(SolutionDir)bin\MCMModule\$(TargetFileName)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
