--- a/src/app/Geckon.MCM.Extension/Geckon.MCM.Extension.csproj
+++ b/src/app/Geckon.MCM.Extension/Geckon.MCM.Extension.csproj
@@ -51,6 +51,7 @@
     <Compile Include="FolderType\FolderTypeExtension.cs" />
     <Compile Include="FormatType\FormatTypeExtension.cs" />
     <Compile Include="Language\LanguageExtension.cs" />
+    <Compile Include="Metadata\MetadataExtension.cs" />
     <Compile Include="ObjectRelationType\ObjectRelationTypeExtension.cs" />
     <Compile Include="ObjectType\ObjectTypeExtension.cs" />
     <Compile Include="Object\ObjectExtension.cs" />
