Added: Solr implementation in Metadata_Set with indexing of base Object fields. Modified: Bug in Object_Get stored procedure, when sending a list of Guids

--- a/src/app/Geckon.MCM.Data.Linq/Geckon.MCM.Data.Linq.csproj
+++ b/src/app/Geckon.MCM.Data.Linq/Geckon.MCM.Data.Linq.csproj
@@ -34,6 +34,9 @@
     <Reference Include="geckon">
       <HintPath>..\..\..\lib\geckon.dll</HintPath>
     </Reference>
+    <Reference Include="Geckon.Portal.Core">
+      <HintPath>..\..\..\lib\Geckon.Portal.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Geckon.Portal.Data">
       <HintPath>..\..\..\lib\Geckon.Portal.Data.dll</HintPath>
     </Reference>
