--- a/src/app/Geckon.MCM.Extension/Geckon.MCM.Extension.csproj
+++ b/src/app/Geckon.MCM.Extension/Geckon.MCM.Extension.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="geckon, Version=1.0.4279.31072, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\geckon.dll</HintPath>
+    </Reference>
     <Reference Include="Geckon.Portal.Core">
       <HintPath>..\..\..\lib\Geckon.Portal.Core.dll</HintPath>
     </Reference>
