--- a/src/app/Geckon.MCM.Data.Linq/Geckon.MCM.Data.Linq.csproj
+++ b/src/app/Geckon.MCM.Data.Linq/Geckon.MCM.Data.Linq.csproj
@@ -90,7 +90,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>COPY $(TargetPath) $(SolutionDir)bin\MCMModule\$(TargetFileName)</PostBuildEvent>
+    <PostBuildEvent>COPY $(TargetPath) $(SolutionDir)bin\MCMModule\$(TargetFileName)
+COPY $(TargetPath) $(SolutionDir)bin\MCMExtension\$(TargetFileName)</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
