--- a/src/app/Geckon.MCM.Extension/Geckon.MCM.Extension.csproj
+++ b/src/app/Geckon.MCM.Extension/Geckon.MCM.Extension.csproj
@@ -63,6 +63,7 @@
     <Compile Include="FolderType\FolderTypeExtension.cs" />
     <Compile Include="FormatType\FormatTypeExtension.cs" />
     <Compile Include="Language\LanguageExtension.cs" />
+    <Compile Include="MetadataSchema\MetadataSchemaExtension.cs" />
     <Compile Include="Metadata\MetadataExtension.cs" />
     <Compile Include="ObjectRelationType\ObjectRelationTypeExtension.cs" />
     <Compile Include="ObjectType\ObjectTypeExtension.cs" />
