--- a/src/app/Geckon.MCM.Core.Exception/Geckon.MCM.Core.Exception.csproj
+++ b/src/app/Geckon.MCM.Core.Exception/Geckon.MCM.Core.Exception.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ObjectRelationAlreadyExistException.cs" />
     <Compile Include="FolderNotEmptyException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
