--- a/src/app/Geckon.MCM.Module.Standard/Geckon.MCM.Module.Standard.csproj
+++ b/src/app/Geckon.MCM.Module.Standard/Geckon.MCM.Module.Standard.csproj
@@ -34,17 +34,8 @@
     <Reference Include="geckon">
       <HintPath>..\..\..\lib\geckon.dll</HintPath>
     </Reference>
-    <Reference Include="Geckon.Portal.Core">
-      <HintPath>..\..\..\lib\Geckon.Portal.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Geckon.Portal.Core.Exception">
-      <HintPath>..\..\..\lib\Geckon.Portal.Core.Exception.dll</HintPath>
-    </Reference>
-    <Reference Include="Geckon.Portal.Core.Standard">
-      <HintPath>..\..\..\lib\Geckon.Portal.Core.Standard.dll</HintPath>
-    </Reference>
-    <Reference Include="Geckon.Portal.Data">
-      <HintPath>..\..\..\lib\Geckon.Portal.Data.dll</HintPath>
+    <Reference Include="Portal">
+      <HintPath>..\..\..\lib\Portal.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
