Added: Initial implementation of Rights check on folders in the module instead of DB. GetTopFolder with user permissions has been implemented.

--- a/src/app/Geckon.MCM.Extension/Geckon.MCM.Extension.csproj
+++ b/src/app/Geckon.MCM.Extension/Geckon.MCM.Extension.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="File\FileExtension.cs" />
     <Compile Include="Folder\FolderExtension.cs" />
     <Compile Include="FolderType\FolderTypeExtension.cs" />
     <Compile Include="FormatType\FormatTypeExtension.cs" />
