--- a/src/app/Geckon.MCM.Module.Standard/Geckon.MCM.Module.Standard.csproj
+++ b/src/app/Geckon.MCM.Module.Standard/Geckon.MCM.Module.Standard.csproj
@@ -48,8 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Rights\Folder.cs" />
     <Compile Include="MCMModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rights\FolderPermissions.cs" />
+    <Compile Include="Rights\PermissionManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Geckon.MCM.Core.Exception\Geckon.MCM.Core.Exception.csproj">
