--- a/src/test/Geckon.MCM.Module.Standard.Test/Geckon.MCM.Module.Standard.Test.csproj
+++ b/src/test/Geckon.MCM.Module.Standard.Test/Geckon.MCM.Module.Standard.Test.csproj
@@ -56,6 +56,7 @@
     <Compile Include="BaseTest.cs" />
     <Compile Include="DestinationInfoTest.cs" />
     <Compile Include="FileTest.cs" />
+    <Compile Include="FolderRightsTest.cs" />
     <Compile Include="FolderTest.cs" />
     <Compile Include="FormatTypeTest.cs" />
     <Compile Include="FolderTypeTest.cs" />
