--- a/src/test/Geckon.MCM.Module.Standard.Test/app.config
+++ b/src/test/Geckon.MCM.Module.Standard.Test/app.config
@@ -7,8 +7,11 @@
   </appSettings>
   
     <connectionStrings>
-        <add name="Portal"
-            connectionString="Data Source=192.168.56.101;Initial Catalog=Portal;Persist Security Info=True;User ID=sa;Password=GECKONpbvu7000"
-            providerName="System.Data.SqlClient" />
+       <add name="PortalEntities"
+            connectionString="metadata=res://*/Portal.csdl|res://*/Portal.ssdl|res://*/Portal.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.56.104;User Id=root;password=GECKONpbvu7000;database=Portal;Persist Security Info=True&quot;"
+            providerName="System.Data.EntityClient" />
+       <add name="MCMEntities" 
+            connectionString="metadata=res://*/MCM.csdl|res://*/MCM.ssdl|res://*/MCM.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.56.104;User Id=root;password=GECKONpbvu7000;Persist Security Info=True;database=MCM&quot;" 
+            providerName="System.Data.EntityClient" />
     </connectionStrings>
 </configuration>
