Added: More DTOs
Object_GetByGUIDs now implement MySQL directly, to be able to retrieve multiple results

--- a/src/app/CHAOS.MCM.Data.DTO/CHAOS.MCM.Data.DTO.csproj
+++ b/src/app/CHAOS.MCM.Data.DTO/CHAOS.MCM.Data.DTO.csproj
@@ -39,6 +39,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DestinationInfo.cs" />
+    <Compile Include="Format.cs" />
+    <Compile Include="FormatCategory.cs" />
     <Compile Include="Folder.cs" />
     <Compile Include="Object.cs" />
     <Compile Include="FileInfo.cs" />
