--- a/src/test/Geckon.MCM.Module.Standard.Test/Geckon.MCM.Module.Standard.Test.csproj
+++ b/src/test/Geckon.MCM.Module.Standard.Test/Geckon.MCM.Module.Standard.Test.csproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <None Include="app.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
