--- a/src/app/CHAOS.MCM.Data.DTO/CHAOS.MCM.Data.DTO.csproj
+++ b/src/app/CHAOS.MCM.Data.DTO/CHAOS.MCM.Data.DTO.csproj
@@ -62,6 +62,7 @@
     <Compile Include="ObjectObjectJoin.cs" />
     <Compile Include="ObjectRelationType.cs" />
     <Compile Include="ObjectType.cs" />
+    <Compile Include="Object_Folder_Join.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
