--- a/src/app/CHAOS.MCM.Data.EF/CHAOS.MCM.Data.EF.csproj
+++ b/src/app/CHAOS.MCM.Data.EF/CHAOS.MCM.Data.EF.csproj
@@ -43,6 +43,7 @@
       <HintPath>..\..\..\lib\Portal.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Data.Linq" />
