--- a/src/test/Geckon.MCM.Module.Standard.Test/Geckon.MCM.Module.Standard.Test.csproj
+++ b/src/test/Geckon.MCM.Module.Standard.Test/Geckon.MCM.Module.Standard.Test.csproj
@@ -34,9 +34,6 @@
     <Reference Include="geckon">
       <HintPath>..\..\..\lib\geckon.dll</HintPath>
     </Reference>
-    <Reference Include="Membase">
-      <HintPath>..\..\..\lib\Membase.dll</HintPath>
-    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\..\..\tools\nunit\nunit.framework.dll</HintPath>
     </Reference>
@@ -49,11 +46,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
-    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +57,7 @@
     <Compile Include="FolderTest.cs" />
     <Compile Include="FormatTypeTest.cs" />
     <Compile Include="FolderTypeTest.cs" />
+    <Compile Include="LinkTest.cs" />
     <Compile Include="MetadataSchemaTest.cs" />
     <Compile Include="MetadataTest.cs" />
     <Compile Include="ObjectRealtionsTypeTest.cs" />
