--- a/src/app/CHAOS.MCM.Data.DTO/CHAOS.MCM.Data.DTO.csproj
+++ b/src/app/CHAOS.MCM.Data.DTO/CHAOS.MCM.Data.DTO.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccessPoint_Object_Join.cs" />
     <Compile Include="File.cs" />
     <Compile Include="DestinationInfo.cs" />
     <Compile Include="Format.cs" />
