--- a/src/app/CHAOS.MCM.Module/CHAOS.MCM.Module.csproj
+++ b/src/app/CHAOS.MCM.Module/CHAOS.MCM.Module.csproj
@@ -65,6 +65,9 @@
       <Name>CHAOS.MCM.Core.Exception</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>COPY $(TargetPath) $(SolutionDir)bin\MCMModule\$(TargetFileName)</PostBuildEvent>
