Extracted common MCM module to an abstract class AMCMModule Fixed bug where a action on the MCM module was called twice

--- a/src/app/CHAOS.MCM.Module/CHAOS.MCM.Module.csproj
+++ b/src/app/CHAOS.MCM.Module/CHAOS.MCM.Module.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AMCMModule.cs" />
     <Compile Include="ObjectModule.cs" />
     <Compile Include="Rights\Folder.cs" />
     <Compile Include="MCMModule.cs" />
