Added simple permission Get on Folders

--- a/src/app/CHAOS.MCM.Data.DTO/CHAOS.MCM.Data.DTO.csproj
+++ b/src/app/CHAOS.MCM.Data.DTO/CHAOS.MCM.Data.DTO.csproj
@@ -46,6 +46,7 @@
     <Compile Include="AccessPoint_Object_Join.cs" />
     <Compile Include="File.cs" />
     <Compile Include="DestinationInfo.cs" />
+    <Compile Include="FolderPermission.cs" />
     <Compile Include="Format.cs" />
     <Compile Include="FormatCategory.cs" />
     <Compile Include="Folder.cs" />
