--- a/src/app/CHAOS.MCM.Module/CHAOS.MCM.Module.csproj
+++ b/src/app/CHAOS.MCM.Module/CHAOS.MCM.Module.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AMCMModule.cs" />
+    <Compile Include="FolderModule.cs" />
     <Compile Include="ObjectModule.cs" />
     <Compile Include="Rights\Folder.cs" />
     <Compile Include="MCMModule.cs" />
