--- a/src/app/CHAOS.MCM.Data.EF/App.Config
+++ b/src/app/CHAOS.MCM.Data.EF/App.Config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="MCMEntities" connectionString="metadata=res://*/MCM.csdl|res://*/MCM.ssdl|res://*/MCM.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=10.211.55.9;User Id=root;password=GECKONpbvu7000;Persist Security Info=True;database=MCM&quot;" providerName="System.Data.EntityClient" />
+    <add name="MCMEntities" connectionString="metadata=res://*/MCM.csdl|res://*/MCM.ssdl|res://*/MCM.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=10.211.55.9;User Id=root;password=pbvu7000;Persist Security Info=True;database=MCM&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
