--- a/src/app/CHAOS.MCM.Data.EF/CHAOS.MCM.Data.EF.csproj
+++ b/src/app/CHAOS.MCM.Data.EF/CHAOS.MCM.Data.EF.csproj
@@ -34,8 +34,7 @@
     <Reference Include="CHAOS">
       <HintPath>..\..\..\lib\CHAOS.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="EntityFramework">
       <HintPath>..\..\..\lib\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=6.4.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
@@ -72,7 +71,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
-    <None Include="packages.config" />
     <None Include="Properties\DataSources\MCMEntities.datasource" />
   </ItemGroup>
   <ItemGroup>
