--- a/src/app/CHAOS.MCM.Module/CHAOS.MCM.Module.csproj
+++ b/src/app/CHAOS.MCM.Module/CHAOS.MCM.Module.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AMCMModule.cs" />
+    <Compile Include="FileModule.cs" />
     <Compile Include="FormatModule.cs" />
     <Compile Include="MetadataSchemaModule.cs" />
     <Compile Include="ObjectTypeModule.cs" />
