Refactoring Folder rights logic Added unit tests for permissions checks Added Moq as a mocking framework for the unit tests

--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -40,8 +40,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\IMcmRepository.cs" />
+    <Compile Include="Permission\FolderPermission.cs" />
+    <Compile Include="Permission\IFolder.cs" />
+    <Compile Include="Permission\InMemory\InMemoryPermissionManager.cs" />
+    <Compile Include="Permission\IPermissionManager.cs" />
+    <Compile Include="Permission\IEntityPermission.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
