--- a/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
+++ b/src/test/CHAOS.MCM.Test/CHAOS.MCM.Test.csproj
@@ -34,6 +34,9 @@
     <Reference Include="CHAOS">
       <HintPath>..\..\..\lib\CHAOS.dll</HintPath>
     </Reference>
+    <Reference Include="Moq">
+      <HintPath>..\..\..\tools\Moq.4.0.10827\NET40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.4.3.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\tools\NUnit-2.6.0.12051\bin\nunit.framework.dll</HintPath>
@@ -49,21 +52,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileTest.cs" />
-    <Compile Include="FolderRightsTest.cs" />
-    <Compile Include="FolderTest.cs" />
-    <Compile Include="FolderTypeTest.cs" />
-    <Compile Include="FormatTypeTest.cs" />
-    <Compile Include="LanguageTest.cs" />
-    <Compile Include="LinkTest.cs" />
-    <Compile Include="MCMTestBase.cs" />
-    <Compile Include="DestinationInfoTest.cs" />
-    <Compile Include="MetadataSchemaTest.cs" />
-    <Compile Include="MetadataTest.cs" />
-    <Compile Include="ObjectRealtionsTypeTest.cs" />
-    <Compile Include="ObjectRelationTest.cs" />
-    <Compile Include="ObjectTest.cs" />
-    <Compile Include="ObjectTypeTest.cs" />
+    <Compile Include="Permission\InMemoryPermissionManagerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -82,6 +71,10 @@
     <ProjectReference Include="..\..\app\CHAOS.MCM.Module\CHAOS.MCM.Module.csproj">
       <Project>{3C75FA89-055C-4AF5-9CE0-60E7AD766ECD}</Project>
       <Name>CHAOS.MCM.Module</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\app\CHAOS.MCM\CHAOS.MCM.csproj">
+      <Project>{461EF48B-BBEB-4A4C-9968-66ACE8D3D43D}</Project>
+      <Name>CHAOS.MCM</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
