Replaced synchronisation logic with new logic that work with the new permissions. Added Synchronization specification class, to separate the sync logic from the trigger Added repository for permissions, that call into the McmRepository, so it's possible to change the punctuality at a later point

--- a/src/app/CHAOS.MCM.Data.DTO/CHAOS.MCM.Data.DTO.csproj
+++ b/src/app/CHAOS.MCM.Data.DTO/CHAOS.MCM.Data.DTO.csproj
@@ -48,8 +48,10 @@
     <Compile Include="AccessPoint_Object_Join.cs" />
     <Compile Include="File.cs" />
     <Compile Include="DestinationInfo.cs" />
+    <Compile Include="FolderGroupJoin.cs" />
     <Compile Include="FolderPermission.cs" />
     <Compile Include="FolderPermissions.cs" />
+    <Compile Include="FolderUserJoin.cs" />
     <Compile Include="Format.cs" />
     <Compile Include="FormatCategory.cs" />
     <Compile Include="Folder.cs" />
