--- a/src/app/CHAOS.MCM.Module/CHAOS.MCM.Module.csproj
+++ b/src/app/CHAOS.MCM.Module/CHAOS.MCM.Module.csproj
@@ -53,10 +53,8 @@
     <Compile Include="ObjectTypeModule.cs" />
     <Compile Include="FolderModule.cs" />
     <Compile Include="ObjectModule.cs" />
-    <Compile Include="Rights\Folder.cs" />
     <Compile Include="MCMModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rights\PermissionManager.cs" />
     <Compile Include="UserProfileModule.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -71,6 +69,10 @@
     <ProjectReference Include="..\CHAOS.MCM.Core.Exception\CHAOS.MCM.Core.Exception.csproj">
       <Project>{4E125648-0FA1-4FD3-AB15-343468DE471D}</Project>
       <Name>CHAOS.MCM.Core.Exception</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CHAOS.MCM\CHAOS.MCM.csproj">
+      <Project>{461EF48B-BBEB-4A4C-9968-66ACE8D3D43D}</Project>
+      <Name>CHAOS.MCM</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
