Implemented SetPermission on AccessPoint

--- a/src/app/CHAOS.MCM/CHAOS.MCM.csproj
+++ b/src/app/CHAOS.MCM/CHAOS.MCM.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Dto\IAccessPoint.cs" />
+    <Compile Include="Data\Dto\IObject.cs" />
+    <Compile Include="Data\Dto\Standard\AccessPoint.cs" />
     <Compile Include="Data\Dto\Standard\AccessPoint_Object_Join.cs" />
     <Compile Include="Data\Dto\Standard\DestinationInfo.cs" />
     <Compile Include="Data\Dto\Standard\EntityPermission.cs" />
@@ -73,6 +76,7 @@
     <Compile Include="Data\Dto\Standard\Permission.cs" />
     <Compile Include="Data\IMcmRepository.cs" />
     <Compile Include="Data\IPermissionRepository.cs" />
+    <Compile Include="Permission\AccessPointPermission.cs" />
     <Compile Include="Permission\FolderPermissionExtensions.cs" />
     <Compile Include="Permission\InMemory\Folder.cs" />
     <Compile Include="Permission\FolderPermission.cs" />
