Fixed issue where indexing failed on folder (GetAncestors)

--- a/src/app/CHAOS.MCM.Data.EF/CHAOS.MCM.Data.EF.csproj
+++ b/src/app/CHAOS.MCM.Data.EF/CHAOS.MCM.Data.EF.csproj
@@ -71,6 +71,7 @@
     </EntityDeploy>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.Config" />
     <None Include="Properties\DataSources\MCMEntities.datasource" />
   </ItemGroup>
   <ItemGroup>
